--- a/styles/contact.css
+++ b/styles/contact.css
@@ -28,14 +28,48 @@ body {
   justify-content: space-between;
   align-items: center;
   gap: 100px;
+  
 }
 .header img {
-    margin: 0 40px 0 100px;
-    font-size: 40px;
-    font-weight: 100;
-    width: 140px;
-    height: 130px;
+  margin: 0 40px 0 100px;
+  font-size: 40px;
+  font-weight: 100;
+  width: 140px;
+  height: 130px;
 }
+.header__open-nav, .checkbox {
+  display: none;
+}
+
+.nav__ul {
+  display: flex;
+  padding: 0;
+  gap: 20px;
+  margin-right: 70px;
+}
+
+.nav__ul-li {
+  list-style: none;
+}
+
+.nav__ul-li-link {
+  display: inline-block;
+  padding: 15px;
+  text-decoration: none;
+  color: var(--white);
+  border-radius: 10px;
+  transition: background 0.5s;
+  font-size: 20px;
+}
+
+.nav__ul-li-link:hover {
+  background: var(--text-info);
+}
+
+.nav__ul-li-link:active {
+  background: var(--text-subtitle);
+}
+
 .navbar {
   margin-right: 100px;
 }
@@ -44,16 +78,9 @@ body {
   font-size: 20px;
   text-decoration: none;
   color: var(--white);
-}
+} 
 .nav-menu {
   display: none;
-}
-.container-btn {
-  display: none;
-}
-
-.navbar a:hover {
-  color: var(--hover);
 }
 
 .main {
@@ -98,6 +125,46 @@ a {
 }
 a i {
   margin-right: 8px;
+}
+.form {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+form {
+  border: 2px solid var(--background-header);
+  padding: 40px;
+  border-radius: 20px;
+  margin: 40px 0;
+  width: 350px;
+  display: flex;
+  flex-direction: column;
+}
+.form p {
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+  color: var(--text-title);
+}
+.form label {
+  color: var(--text-subtitle);
+}
+.form input{
+  border: 1px solid var(--text-title);
+  border-radius: 5px;
+  padding: 5px 0 5px 5px;
+}
+.form input::placeholder {
+  color: var(--text-subtitle);
+}
+.form textarea {
+  height: 100px;
+  border-color: var(--text-title);
+  border-radius: 10px;
+  padding: 5px 0 0 5px;
+}
+.form textarea::placeholder {
+  color: var(--text-subtitle);
 }
 .container {
   width: 80%;
@@ -156,10 +223,13 @@ a i {
     width: 130px;
     height: 120px;
   }
+  .navbar {
+    margin-right: 20px;
+  }
   .navbar a {
     font-size: 18px;
   }
-  .nav-menu {
+  a .nav-menu {
     display: none;
   }
   .main .contact .contact-container .text-contact {
@@ -184,28 +254,30 @@ a i {
     height: 90px;
     margin-left: 100px;
   }
-  .nav-menu {
-    display: block;
-    font-size: 35px;
+  .header__open-nav {
+    display: inline-block;
+    color: #fff;
+    font-size: 2em;
+    position: absolute;
+    right: 70px;
   }
-  .container-btn {
-    display: none;
+  .nav {
+      display: none;
+      background-color: var(--background-card);
+      position: absolute;
+      height: 500px;
+      width: 100%;
+      top: 100px;
+      z-index: 10;
   }
-  .menu {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    top: 100px;
-    right: 0;
-    background-color: var(--background-card);
-    display: grid;
-    place-items: center;
-    clip-path: circle(0% at top left);
-    transition: clip-path 0.4s;
-    z-index: 10;
+  .nav__ul {
+      flex-direction: column;
+      margin: auto;
+      justify-content: space-between;
+      text-align: center;
   }
-  .menu:target {
-    clip-path: circle(150% at top left);
+  .checkbox:checked ~ .nav {
+      display: flex;
   }
   .main .contact .contact-container {
     flex-direction: column;
@@ -229,7 +301,7 @@ a i {
     margin-left: 30px;
   }
   .navbar {
-    margin-right: 30px;
+    margin-right: 20px;
   }
   .maps {
     width: 90%;
