--- a/styles/style.css
+++ b/styles/style.css
@@ -28,51 +28,61 @@ body {
   justify-content: space-between;
   align-items: center;
   gap: 100px;
-  img {
-    margin: 0 40px 0 100px;
-    font-size: 40px;
-    font-weight: 100;
-    width: 140px;
-    height: 130px;
-  }
-  .navbar {
-    margin-right: 100px;
-    a {
-      margin: 0 10px 0 10px;
-      font-size: 20px;
-      text-decoration: none;
-      color: var(--white);
-    }
-    .nav-menu {
-      display: none;
-    }
-    .container-btn {
-      display: none;
-    }
-  }
-
-  .navbar a:hover {
-    color: var(--hover);
-  }
-  .container-btn {
-    cursor: unset;
-    .btn {
-      margin: 80px;
-      height: 40px;
-      width: 130px;
-      border: none;
-      border-radius: 10%;
-      background-color: var(--btn);
-      color: var(--white);
-      font-size: 16px;
-      cursor: pointer;
-    }
-    .btn:hover {
-      color: var(--hover);
-      background-color: var(--hover-btn);
-    }
-  }
+  
 }
+.header img {
+  margin: 0 40px 0 100px;
+  font-size: 40px;
+  font-weight: 100;
+  width: 140px;
+  height: 130px;
+}
+.header__open-nav, .checkbox {
+  display: none;
+}
+
+.nav__ul {
+  display: flex;
+  padding: 0;
+  gap: 20px;
+  margin-right: 70px;
+}
+
+.nav__ul-li {
+  list-style: none;
+}
+
+.nav__ul-li-link {
+  display: inline-block;
+  padding: 15px;
+  text-decoration: none;
+  color: var(--white);
+  border-radius: 10px;
+  transition: background 0.5s;
+  font-size: 20px;
+}
+
+.nav__ul-li-link:hover {
+  background: var(--text-info);
+}
+
+.nav__ul-li-link:active {
+  background: var(--text-subtitle);
+}
+
+.navbar {
+  margin-right: 100px;
+}
+.navbar a {
+  margin: 0 10px 0 10px;
+  font-size: 20px;
+  text-decoration: none;
+  color: var(--white);
+} 
+.nav-menu {
+  display: none;
+}
+
 .main {
   .header-us {
     background-image: url(../img/background.jpg);
@@ -373,18 +383,10 @@ body {
 @media (max-width: 1024px) {
   .header {
     gap: 0;
-    img {
-      width: 130px;
-      height: 120px;
-    }
-    .navbar {
-      a {
-        font-size: 18px;
-      }
-      .nav-menu {
-        display: none;
-      }
-    }
+  }
+  .header img {
+    width: 130px;
+    height: 120px;
   }
   .main {
     .header-us {
@@ -435,36 +437,36 @@ body {
   .header {
     height: 100px;
     justify-content: space-between;
-    img {
-      width: 100px;
-      height: 90px;
-      margin-left: 100px;
-    }
-    .navbar {
-      display: block;
-      .nav-menu {
-        font-size: 35px;
-      }
-    }
-    .container-btn {
+  }
+  .header img {
+    width: 100px;
+    height: 90px;
+    margin-left: 100px;
+  }
+  .header__open-nav {
+    display: inline-block;
+    color: #fff;
+    font-size: 2em;
+    position: absolute;
+    right: 70px;
+  }
+  .nav {
       display: none;
-    }
-    .menu {
-      position: fixed;
-      left: 0;
-      bottom: 0;
-      top: 100px;
-      right: 0;
       background-color: var(--background-card);
-      display: grid;
-      place-items: center;
-      clip-path: circle(0% at top left);
-      transition: clip-path 0.4s;
+      position: absolute;
+      height: 500px;
+      width: 100%;
+      top: 100px;
       z-index: 10;
-    }
-    .menu:target {
-      clip-path: circle(150% at top left);
-    }
+  }
+  .nav__ul {
+      flex-direction: column;
+      margin: auto;
+      justify-content: space-between;
+      text-align: center;
+  }
+  .checkbox:checked ~ .nav {
+      display: flex;
   }
   .main {
     .header-us {
@@ -528,9 +530,6 @@ body {
 @media (max-width: 575px) {
   .header img {
     margin-left: 30px;
-  }
-  .navbar {
-    margin-right: 30px;
   }
   .main {
     .header-us {
