--- a/styles/ayuda.css
+++ b/styles/ayuda.css
@@ -90,7 +90,7 @@ h2 {
   color: var(--text-title);
   font-size: 40px;
 }
-p {
+main section .p {
   width: 60%;
   margin: 20px auto;
   text-align: justify;
@@ -131,6 +131,11 @@ p {
   background-color: var(--hover-btn);
 }
 
+footer {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
 .footer {
   width: 100%;
   height: 250px;
@@ -139,6 +144,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+  bottom: 0;
 }
 .footer-item_one {
   width: 400px;
