--- a/styles/style.css
+++ b/styles/style.css
@@ -83,237 +83,120 @@ body {
   display: none;
 }
 
-.main {
-  .header-us {
-    background-image: url(../img/background.jpg);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    height: 500px;
-    .opacity {
-      position: absolute;
-      width: 100%;
-      height: 500px;
-      background-color: var(--black);
-      opacity: 0.4;
-    }
-    .container-header {
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      .text {
-        margin-top: 150px;
-        width: 60%;
-        color: var(--white);
-        text-align: center;
-        h1 {
-          font-size: 50px;
-          margin: 0;
-        }
-        h3 {
-          font-size: 20px;
-          margin-top: 0;
-        }
-        p {
-          font-size: 16px;
-        }
-        .container-btn {
-          cursor: unset;
-          .btn {
-            height: 40px;
-            width: 130px;
-            border: none;
-            border-radius: 10%;
-            background-color: var(--btn);
-            color: var(--white);
-            font-size: 16px;
-            cursor: pointer;
-          }
-          .btn:hover {
-            color: var(--hover);
-            background-color: var(--hover-btn);
-          }
-        }
-      }
-      .img {
-        margin-top: 50px;
-
-        width: 40%;
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        img {
-          width: 400px;
-          height: 400px;
-        }
-      }
-    }
-  }
-  .us {
-    .title {
-      text-align: center;
-      margin: 100px 0 30px 0;
-      color: var(--text-title);
-      font-size: 40px;
-    }
-    .container-us {
-      margin-top: 60px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 60px;
-      .us-img {
-        width: 500px;
-        img {
-          height: 450px;
-          border-radius: 20px;
-        }
-      }
-      .us-text {
-        width: 576px;
-        h2 {
-          color: var(--text-title);
-        }
-        p {
-          color: var(--text-subtitle);
-        }
-        ul li {
-          color: var(--text-info);
-        }
-        .container-btn {
-          cursor: unset;
-          .btn {
-            height: 40px;
-            width: 130px;
-            margin-top: 30px;
-            border: none;
-            border-radius: 10%;
-            background-color: var(--btn);
-            color: var(--white);
-            font-size: 16px;
-            cursor: pointer;
-          }
-          .btn:hover {
-            color: var(--hover);
-            background-color: var(--hover-btn);
-          }
-        }
-      }
-    }
-  }
-  .services {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    .title {
-      text-align: center;
-      margin: 80px 0 50px 0;
-      color: var(--text-title);
-      font-size: 40px;
-    }
-    .container-card {
-      display: flex;
-      width: 90%;
-      justify-content: center;
-      gap: 10px;
-      .services-back-one {
-        background-image: url(../img/aseo-limpieza.jpg);
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover;
-      }
-      .services-back-two {
-        background-image: url(../img/sistemas-hidraulicos.jpg);
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover;
-      }
-      .services-back-three {
-        background-image: url(../img/mantenimiento.jpg);
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover;
-      }
-      .services-back-four {
-        background-image: url(../img/fumigador.png);
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover;
-      }
-      .card {
-        width: 25%;
-        height: 400px;
-        border-radius: 20px;
-        background-color: var(--background-card);
-        color: var(--white);
-        cursor: pointer;
-        display: flex;
-        justify-content: center;
-        align-items: end;
-        position: relative;
-        .back-tittle {
-          width: 100%;
-          height: 100px;
-          background-color: var(--background-card);
-          border-radius: 0 0 20px 20px;
-          opacity: 0.5;
-          transition: all 0.5s;
-        }
-        h3 {
-          padding: 0 18px;
-          position: absolute;
-          margin-bottom: 50px;
-          text-align: center;
-          transition: all 0.5s;
-        }
-        p {
-          padding: 0 18px;
-          display: none;
-        }
-      }
-      .card:hover {
-        box-shadow: 9px 9px 17px 0px rgba(93, 173, 226, 1);
-        align-items: center;
-        .back-tittle {
-          transition: all 1s;
-          height: 100%;
-          border-radius: 20px;
-          opacity: 0.8;
-        }
-        h3 {
-          position: absolute;
-          padding-bottom: 60px;
-          transition: all 0.5s;
-        }
-        p {
-          display: block;
-          position: absolute;
-          padding-top: 60px;
-        }
-      }
-    }
-    .container-btn {
-      cursor: unset;
-      .btn {
-        height: 40px;
-        width: 130px;
-        margin-top: 40px;
-        border: none;
-        border-radius: 10%;
-        background-color: var(--btn);
-        color: var(--white);
-        font-size: 16px;
-        cursor: pointer;
-      }
-      .btn:hover {
-        color: var(--hover);
-        background-color: var(--hover-btn);
-      }
-    }
-  }
+.main .header-us {
+  background-image: url(../img/background.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  height: 500px;
 }
+.opacity {
+  position: absolute;
+  width: 100%;
+  height: 500px;
+  background-color: var(--black);
+  opacity: 0.4;
+}
+.container-header {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.text {
+  margin-top: 150px;
+  width: 60%;
+  color: var(--white);
+  text-align: center;
+}
+.text h1 {
+  font-size: 50px;
+  margin: 0;
+}
+.text h3 {
+  font-size: 20px;
+  margin-top: 0;
+}
+.text p {
+  font-size: 16px;
+}
+.container-btn {
+  cursor: unset;
+}
+.btn {
+  height: 40px;
+  width: 130px;
+  border: none;
+  border-radius: 10%;
+  background-color: var(--btn);
+  color: var(--white);
+  font-size: 16px;
+  cursor: pointer;
+}
+.btn:hover {
+  color: var(--hover);
+  background-color: var(--hover-btn);
+}
+.img {
+  margin-top: 50px;
+  width: 40%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.img img {
+  width: 400px;
+  height: 400px;
+}
+.us .title {
+  text-align: center;
+  margin: 100px 0 30px 0;
+  color: var(--text-title);
+  font-size: 40px;
+}
+.us .container-us {
+  margin-top: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 60px;
+}
+.us-img {
+  width: 500px;
+}
+.us-img img {
+  height: 450px;
+  border-radius: 20px;
+}
+.us-text {
+  width: 576px;
+}
+.us-text h2 {
+  color: var(--text-title);
+}
+.us-text p {
+  color: var(--text-subtitle);
+}
+.container-btn {
+  cursor: unset;
+}
+.btn {
+  height: 40px;
+  width: 130px;
+  margin-top: 30px;
+  border: none;
+  border-radius: 10%;
+  background-color: var(--btn);
+  color: var(--white);
+  font-size: 16px;
+  cursor: pointer;
+}
+.btn:hover {
+color: var(--hover);
+  background-color: var(--hover-btn);
+}
+
 .footer {
   width: 100%;
   height: 250px;
@@ -322,62 +205,22 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  .footer-item_one {
-    width: 400px;
-    text-align: center;
-    img {
-      width: 200px;
-    }
-    h3 {
-      color: var(--white);
-    }
-    p {
-      color: var(--white);
-      i {
-        margin-right: 8px;
-      }
-    }
-  }
-  .footer-item_two {
-    width: 25%;
-    padding-top: 60px;
-    text-align: center;
-    h3 {
-      padding-top: 0;
-      margin-top: 20px;
-      margin-bottom: 40px;
-      color: var(--white);
-    }
-    p {
-      color: var(--white);
-      i {
-        margin-right: 8px;
-      }
-    }
-  }
-  .footer-item_three {
-    width: 25%;
-    padding-top: 60px;
-    text-align: center;
-    h3 {
-      padding-top: 0;
-      margin-top: 20px;
-      margin-bottom: 40px;
-      color: var(--white);
-    }
-    .icon-social-media {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      a {
-        color: var(--white);
-        text-decoration: none;
-        i {
-          margin-right: 8px;
-        }
-      }
-    }
-  }
+}
+.footer-item_one {
+  width: 400px;
+  text-align: center;
+}
+.footer-item_one img {
+  width: 200px;
+}
+.footer-item_one h3 {
+  color: var(--white);
+}
+.footer-item_one p {
+  color: var(--white);
+}
+.footer-item_one p i {
+  margin-right: 8px;
 }
 
 @media (max-width: 1024px) {
@@ -388,48 +231,23 @@ body {
     width: 130px;
     height: 120px;
   }
-  .main {
-    .header-us {
-      .container-header {
-        justify-content: space-around;
-        .text {
-          width: 60%;
-        }
-      }
-    }
-    .us {
-      .container-us {
-        gap: 80px;
-        .us-img {
-          width: 300px;
-          img {
-            height: 300px;
-          }
-        }
-        .us-text {
-          width: 500px;
-        }
-      }
-    }
-    .services {
-      .container-card {
-        .card {
-          height: 300px;
-          h3 {
-            margin-bottom: 15px;
-          }
-        }
-        .card:hover {
-          h3 {
-            margin-bottom: 80px;
-          }
-          p {
-            margin-top: 80px;
-          }
-        }
-      }
-    }
-
+  .header-us .container-header {
+    justify-content: space-around;
+  }
+  .container-header .text {
+    width: 60%;
+  }
+  .us .container-us {
+    gap: 80px;
+  }
+  .us-img {
+    width: 300px;
+  }
+  .us-img img {
+    height: 300px;
+  }
+  .us .us-text {
+    width: 500px;
   }
 }
 
@@ -451,76 +269,68 @@ body {
     right: 70px;
   }
   .nav {
-      display: none;
-      background-color: var(--background-card);
-      position: absolute;
-      height: 500px;
-      width: 100%;
-      top: 100px;
-      z-index: 10;
+    display: none;
+    background-color: var(--background-card);
+    position: absolute;
+    height: 500px;
+    width: 100%;
+    top: 100px;
+    z-index: 10;
   }
   .nav__ul {
-      flex-direction: column;
-      margin: auto;
-      justify-content: space-between;
-      text-align: center;
+    flex-direction: column;
+    margin: auto;
+    justify-content: space-between;
+    text-align: center;
   }
   .checkbox:checked ~ .nav {
-      display: flex;
+    display: flex;
   }
-  .main {
-    .header-us {
-      height: 450px;
-      .opacity {
-        height: 450px;
-      }
-      .container-header {
-        .text {
-          margin-top: 100px;
-          h1 {
-            font-size: 40px;
-          }
-        }
-        .img {
-          margin-top: 88px;
-          img {
-            width: 300px;
-            height: 300px;
-          }
-        }
-      }
-    }
-    .us {
-      .container-us {
-        flex-direction: column-reverse;
-        gap: 40px;
-        .us-img {
-          width: 400px;
-          img {
-            height: 400px;
-          }
-        }
-        .us-text {
-          text-align: center;
-          ul {
-            text-align: left;
-          }
-        }
-      }
-    }
-    .services {
-      .container-card {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        .card {
-          width: 100%;
-          .back-tittle {
-            height: 80px;
-          }
-        }
-      }
-    }
+  .header-us {
+    height: 450px;
+  }
+  .opacity {
+    height: 450px;
+  }
+  .container-header .text {
+      margin-top: 100px;
+  }
+  .container-header h1 {
+    font-size: 40px;
+  }
+  .container-header.img {
+    margin-top: 88px;
+  }
+  .container-header .img img {
+    width: 300px;
+    height: 300px;
+  }
+  .container-us {
+    flex-direction: column-reverse;
+    gap: 40px;
+  }
+  .us-img {
+    width: 400px;
+  }
+  .us-img img {
+    height: 400px;
+  }
+  .us-text {
+    text-align: center;
+  }
+  .us-text ul {
+    text-align: left;
+  }
+  .services .container-card {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+  .container-card .card {
+    width: 100%;
+  }
+  .card .back-tittle {
+    height: 80px;
   }
   .footer {
     gap: 36px;
@@ -531,30 +341,20 @@ body {
   .header img {
     margin-left: 30px;
   }
-  .main {
-    .header-us {
-      .container-header {
-        flex-direction: column;
-        .text {
-          width: 90%;
-        }
-        .img {
-          display: none;
-        }
-      }
-    }
-    .us {
-      .container-us {
-        .us-text {
-          width: 90%;
-        }
-      }
-    }
-    .services {
-      .container-card {
-        grid-template-columns: 1fr;
-      }
-    }
+  .header-us .container-header {
+    flex-direction: column;
+  }
+  .container-header .text {
+    width: 90%;
+  }
+  .container-header .img {
+    display: none;
+  }
+  .container-us .us-text {
+    width: 90%;
+  }
+  .services .container-card {
+    grid-template-columns: 1fr;
   }
   .footer {
     gap: 0;
