--- a/styles/services.css
+++ b/styles/services.css
@@ -204,7 +204,7 @@ body {
   display: none;
 }
 .card:hover {
-  box-shadow: 9px 9px 17px 0px rgba(93, 173, 226, 1);
+  box-shadow: 9px 9px 17px 0px #5dade2;
   align-items: center;
 }
 .card:hover .back-tittle {
@@ -245,16 +245,98 @@ body {
   justify-content: center;
   gap: 10px;
 }
-.container-photo .img {
+.container-photo .img-1 {
   width: 250px;
   height: 250px;
+  background-image: url(../img/project-1.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.container-photo .img-2 {
+  width: 250px;
+  height: 250px;
+  background-image: url(../img/project-2.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.container-photo .img-3 {
+  width: 250px;
+  height: 250px;
+  background-image: url(../img/project-3.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.container-photo .img-4 {
+  width: 250px;
+  height: 250px;
+  background-image: url(../img/project-4.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.container-photo .img-5 {
+  width: 250px;
+  height: 250px;
+  background-image: url(../img/project-5.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.container-photo .img-6 {
+  width: 250px;
+  height: 250px;
+  background-image: url(../img/project-6.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.container-photo .img-7 {
+  width: 250px;
+  height: 250px;
+  background-image: url(../img/project-1.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.container-photo .img-8 {
+  width: 250px;
+  height: 250px;
+  background-image: url(../img/project-2.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.container-photo .img p {
+  display: none;
+}
+.container-photo .img:hover p {
+  display: block;
+  width: 195px;
+  text-align: center;
+  color: var(--white);
+  transition: all .5s;
+  position: absolute;
+  font-size: 20px;
+}
+.img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .img img {
   width: 250px;
   height: 250px;
 }
-.container-photo .img:hover {
-  box-shadow: 9px 9px 17px 0px rgba(93, 173, 226, 1);
+.container-photo .img:hover .fondo {
+  width: 100%;
+  height: 100%;
+  box-shadow: 9px 9px 17px 0px #5dade2;
+  background-color: var(--background-card);
+  opacity: 0.5;
+  transition: all .5s;
 }
 .container {
   width: 80%;
